# fpga-assembler

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  MODULE.bazel  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml
bazel/: bazel-compile-commands-extractor-fix.patch  prjxray-add-module-bazel.patch
fpga/: BUILD  assembler.cc  database-parsers.cc  database-parsers.h  database-parsers_test.cc  database.cc  database.h  database_test.cc  fasm-assembler.h  fasm-parser.h  fasm-parser_test.cc  memory-mapped-file.cc  memory-mapped-file.h
fpga/xilinx/: BUILD  README.md  arch-types.h  arch-xc7-configuration-packet.cc  arch-xc7-configuration-packet.h  arch-xc7-configuration-packet_test.cc  arch-xc7-defs.cc  arch-xc7-defs.h  arch-xc7-frame-address.cc  arch-xc7-frame-address.h  arch-xc7-frame.cc  arch-xc7-frame.h  arch-xc7-frame_test.cc  arch-xc7-part.cc  arch-xc7-part.h  arch-xc7-part_test.cc  big-endian-span.h  big-endian-span_test.cc  bistream-writer.h  bit-ops.h  (+13 more)
prjxstream/: BUILD  banks-tiles-registry.cc  banks-tiles-registry_test.cc  database.cc  database.h  database_test.cc  fasm-assembler.h  fasm-parser.h  fasm-parser_test.cc  memory-mapped-file.cc  memory-mapped-file.h  xstream.cc
scripts/: before-submit.sh  create-workspace-status.sh  get-bant-path.sh  make-compilation-db.sh  run-build-cleaner.sh  run-clang-format.sh  run-clang-tidy-cached.cc  run-verible-verilog-format.sh
xstream/: BUILD  banks-tiles-registry.cc  banks-tiles-registry.h  banks-tiles-registry_test.cc  database-parsers.cc  database-parsers.h  database-parsers_test.cc  database.cc  database.h  database_test.cc  fasm-assembler.h  fasm-parser.h  fasm-parser_test.cc  memory-mapped-file.cc  memory-mapped-file.h  xstream.cc
(+4 files in other folders)
