module(
    name = "fpga-assembler",
    version = "0.0.1",
)

# Bazel C/C++ language rules and deps.
bazel_dep(name = "rules_cc", version = "0.0.16")
git_override(
    module_name = "rules_cc",
    commit = "d74915024017250e46d95e91a3defc34174effe0",
    remote = "https://github.com/bazelbuild/rules_cc",
)

bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "rules_license", version = "1.0.0")

# compilation DB; build_cleaner
bazel_dep(name = "bant", version = "0.2.0", dev_dependency = True)
