module(
    name = "fpga-assembler",
    version = "0.0.1",
)

# Bazel C/C++ language rules and deps.
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "rules_license", version = "1.0.0")

# compilation DB; build_cleaner
bazel_dep(name = "bant", version = "0.2.0", dev_dependency = True)
